tests/negative/scope/class-imported-twice/test.smol
package testing;

import alpha:Foo;
import alpha:Foo;

class Test {
	fn main() Unit {
	}
}
